# PULSE

./: .gitignore  README.md
.github/workflows/: build-node.yml
app/: README.md  index.html  package-lock.json  package.json
app/electron/: main.js  preload.js
app/src/: App.css  App.tsx  api.ts  crypto.ts  index.css  storage.ts  useWebSocket.ts
app/src/components/: AccountsPanel.tsx  Card.tsx  ChainExplorer.tsx  Dashboard.tsx  Navbar.tsx  Whitepaper.tsx  types.ts
device-sdk/ios/: Package.swift  README.md
device-sdk/ios/Sources/PulseSDK/: Crypto.swift  HealthKitProvider.swift  Models.swift  NetworkClient.swift  PulseClient.swift  PulseView.swift
device-sdk/ios/Tests/: PulseSDKTests.swift
docs/: ARCHITECTURE.md  AWS_LAUNCH_PLAN.md  MEDIUM-ARTICLE.md  WHITEPAPER.md
infrastructure/: FULL-AWS-DEPLOYMENT.md  HTTPS-NODE-CLOUDFLARE.md  RESTART-NODE.md  main.tf  pulse-node.service
node/: Cargo.toml
node/src/: lib.rs  main.rs
node/src/api/: events.rs  mod.rs  rate_limit.rs  websocket.rs
node/src/consensus/: biometrics.rs  mod.rs
node/src/crypto/: mod.rs
node/src/network/: mod.rs
node/src/storage/: mod.rs
node/src/types/: mod.rs
prototype/: pulse_network.py
