[package]
name = "pulse-node"
version = "0.1.0"
edition = "2021"
authors = ["Pulse Network"]
description = "Proof-of-Life consensus node for the Pulse Network"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# P2P (libp2p)
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }

# Storage
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
